--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="actionMenuTextColor">@color/fg_network</item>
+        <item name="actionMenuTextColor">@color/fg_value_black</item>
         <item name="android:textViewStyle">@style/MontserratTextViewStyle</item>
         <item name="android:editTextStyle">@style/My.Widget.EditText</item>
         <item name="android:autoCompleteTextViewStyle">@style/My.Widget.AutoCompleteTextView</item>
@@ -25,6 +25,7 @@
 
     <style name="CheckboxStyle" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
         <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:colorControlActivated">@color/fg_value_black</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/darkest_blue</item>
     </style>
@@ -90,7 +91,7 @@
     </style>
 
     <style name="My.TextAppearance.Widget.ActionBar.Title" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/fg_value_black</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
@@ -155,6 +156,11 @@
 
     <style name="MontserratRegular.DB.12">
         <item name="android:textSize">12sp</item>
+    </style>
+
+
+    <style name="MontserratRegular.DB.16">
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="MontserratRegular.MG">
@@ -346,7 +352,7 @@
         <item name="android:layout_marginLeft">@dimen/space_medium</item>
         <item name="android:layout_marginRight">@dimen/space_medium</item>
         <item name="android:layout_marginTop">@dimen/list_entry_padding_vertical</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/fg_value_black</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textAllCaps">true</item>
     </style>
