--- a/wallet/res/drawable/side_nav_bar.xml
+++ b/wallet/res/drawable/side_nav_bar.xml
@@ -1,9 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
         android:angle="135"
         android:startColor="#fef000"
         android:centerColor="#fef000"
         android:endColor="#fef378"
-        android:type="linear" />
+        android:type="linear"
+        />
 </shape>
