--- a/wallet/res/layout/address_book_onepane.xml
+++ b/wallet/res/layout/address_book_onepane.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -11,13 +13,15 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/My.PopupOverlay"/>
+        app:popupTheme="@style/My.PopupOverlay"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_less_bright"
-        android:orientation="vertical">
+        android:background="@color/fg_value_black"
+        android:orientation="vertical"
+        >
 
         <android.support.design.widget.TabLayout
             android:id="@+id/address_book_pager_tabs"
@@ -27,14 +31,18 @@
             android:minHeight="?attr/actionBarSize"
             app:tabMode="fixed"
             app:tabGravity="fill"
-            app:tabIndicatorColor="@android:color/white"/>
+            app:tabIndicatorColor="@android:color/black"
+            app:tabTextColor="@color/fg_value_black"
+
+            />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/address_book_pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/bg_bright" />
+            android:background="@color/bg_bright"
+            />
 
     </LinearLayout>
 
