--- a/wallet/res/layout/address_book_row.xml
+++ b/wallet/res/layout/address_book_row.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/bg_list"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
@@ -27,7 +28,7 @@
         android:id="@+id/address_book_row_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="XcJcu9C2y1MMuNjgjnyqfYCnPoK94D18oL"
+        tools:text="P8gMeBTpEXqqxMFSkcAbb6tDsUWbdshB2C"
         style="@style/MontserratRegular.MG.12"/>
 
     <TextView
