--- a/wallet/res/layout/ext_app_bar_layout.xml
+++ b/wallet/res/layout/ext_app_bar_layout.xml
@@ -9,6 +9,7 @@
     app:contentInsetStartWithNavigation="0dp"
     app:contentInsetEndWithActions="0dp"
     app:popupTheme="@style/My.PopupOverlay"
+    android:theme="@style/threeDotsTheme"
     >
 
     <RelativeLayout
@@ -30,6 +31,7 @@
         <ImageView
             android:id="@+id/toolbar_logo"
             android:src="@drawable/dash_logo_white"
+            android:tint="@android:color/transparent"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -45,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:text="@string/net_type_indicator"
             tools:ignore="HardcodedText"
             tools:visibility="visible"
