--- a/wallet/res/drawable/balance_prefix_micro.xml
+++ b/wallet/res/drawable/balance_prefix_micro.xml
@@ -1,13 +1,34 @@
-<vector android:height="7dp" android:viewportHeight="142.0"
-    android:viewportWidth="220.0" android:width="11dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff"
-        android:pathData="M112,49.4c0,10.2 0.3,18.6 0.7,18.6 0.4,0 5.6,-2.8 11.5,-6.2 10.3,-5.9 10.8,-6.4 10.8,-9.5l0,-3.3 5.8,0c5.2,0 6.7,-0.5 15.5,-5.7 5.3,-3.1 9.7,-6 9.7,-6.4 0,-0.4 -2.6,-1.8 -5.7,-3 -5.2,-2 -7.9,-2.3 -27,-2.7l-21.3,-0.4 0,18.6z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M166.1,39.6c-7.9,4.6 -14.7,8.4 -15.2,8.4 -1.7,0 -0.9,1.8 1.7,3.5 3,1.9 5.4,7.1 5.4,11.6 0,2.3 0.4,3 1.5,2.5 2.2,-0.8 32.8,-18.6 34,-19.7 0.6,-0.6 -1.6,-3.5 -6,-7.8l-7,-6.9 -14.4,8.4z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M168,63.1c-5.8,3.3 -11.6,7 -13,8.3 -1.4,1.3 -4.1,2.8 -6,3.5 -1.9,0.6 -11,5.5 -20.2,10.7l-16.8,9.6 0,13.9c0,7.6 0.4,13.9 0.9,13.9 0.5,0 5.7,-2.7 11.5,-6.1l10.5,-6 0.3,-8.7 0.3,-8.7 10.5,-0.5c8.6,-0.5 11.6,-1.1 16.5,-3.4 11.7,-5.3 17.5,-13.9 17.5,-25.9 0,-3.7 -0.3,-6.7 -0.8,-6.7 -0.4,0 -5.4,2.7 -11.2,6.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M112.5,70.5c-11.6,6.8 -21.4,12.6 -22,12.8 -0.5,0.3 2.2,3.7 6.1,7.6l7,7.2 18.7,-10.8c10.3,-5.9 18.7,-11.1 18.7,-11.5 0,-0.5 -1.3,-0.8 -3,-0.8l-3,0 0,-8.5c0,-4.7 -0.3,-8.5 -0.7,-8.4 -0.5,0 -10.2,5.6 -21.8,12.4z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M39,90.5l0,30.5 4,0 4,0 0,-8.3 0,-8.2 6.4,0c5,0 7.1,-0.5 9.3,-2.1l2.9,-2.2 2.1,2.4c1.6,1.8 3.2,2.4 6.2,2.4 3.9,0 4.1,-0.2 4.1,-3 0,-1.7 -0.4,-3 -0.9,-3 -0.5,0 -1.7,-0.7 -2.5,-1.6 -1.3,-1.3 -1.6,-4.5 -1.6,-19.5l0,-17.9 -3.5,0 -3.5,0 0,12.7c-0.1,15.2 -1,20 -4.5,23 -3.4,3 -9.7,3.1 -12.5,0.3 -1.8,-1.8 -2,-3.3 -2,-19l0,-17 -4,0 -4,0 0,30.5z" android:strokeColor="#00000000"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="7dp"
+    android:viewportHeight="142.0"
+    android:viewportWidth="220.0"
+    android:width="11dp"
+    >
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M112,49.4c0,10.2 0.3,18.6 0.7,18.6 0.4,0 5.6,-2.8 11.5,-6.2 10.3,-5.9 10.8,-6.4 10.8,-9.5l0,-3.3 5.8,0c5.2,0 6.7,-0.5 15.5,-5.7 5.3,-3.1 9.7,-6 9.7,-6.4 0,-0.4 -2.6,-1.8 -5.7,-3 -5.2,-2 -7.9,-2.3 -27,-2.7l-21.3,-0.4 0,18.6z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M166.1,39.6c-7.9,4.6 -14.7,8.4 -15.2,8.4 -1.7,0 -0.9,1.8 1.7,3.5 3,1.9 5.4,7.1 5.4,11.6 0,2.3 0.4,3 1.5,2.5 2.2,-0.8 32.8,-18.6 34,-19.7 0.6,-0.6 -1.6,-3.5 -6,-7.8l-7,-6.9 -14.4,8.4z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M168,63.1c-5.8,3.3 -11.6,7 -13,8.3 -1.4,1.3 -4.1,2.8 -6,3.5 -1.9,0.6 -11,5.5 -20.2,10.7l-16.8,9.6 0,13.9c0,7.6 0.4,13.9 0.9,13.9 0.5,0 5.7,-2.7 11.5,-6.1l10.5,-6 0.3,-8.7 0.3,-8.7 10.5,-0.5c8.6,-0.5 11.6,-1.1 16.5,-3.4 11.7,-5.3 17.5,-13.9 17.5,-25.9 0,-3.7 -0.3,-6.7 -0.8,-6.7 -0.4,0 -5.4,2.7 -11.2,6.1z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M112.5,70.5c-11.6,6.8 -21.4,12.6 -22,12.8 -0.5,0.3 2.2,3.7 6.1,7.6l7,7.2 18.7,-10.8c10.3,-5.9 18.7,-11.1 18.7,-11.5 0,-0.5 -1.3,-0.8 -3,-0.8l-3,0 0,-8.5c0,-4.7 -0.3,-8.5 -0.7,-8.4 -0.5,0 -10.2,5.6 -21.8,12.4z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M39,90.5l0,30.5 4,0 4,0 0,-8.3 0,-8.2 6.4,0c5,0 7.1,-0.5 9.3,-2.1l2.9,-2.2 2.1,2.4c1.6,1.8 3.2,2.4 6.2,2.4 3.9,0 4.1,-0.2 4.1,-3 0,-1.7 -0.4,-3 -0.9,-3 -0.5,0 -1.7,-0.7 -2.5,-1.6 -1.3,-1.3 -1.6,-4.5 -1.6,-19.5l0,-17.9 -3.5,0 -3.5,0 0,12.7c-0.1,15.2 -1,20 -4.5,23 -3.4,3 -9.7,3.1 -12.5,0.3 -1.8,-1.8 -2,-3.3 -2,-19l0,-17 -4,0 -4,0 0,30.5z"
+        android:strokeColor="#00000000"
+        />
 </vector>
