--- a/wallet/res/drawable/balance_prefix_milli.xml
+++ b/wallet/res/drawable/balance_prefix_milli.xml
@@ -1,13 +1,33 @@
-<vector android:height="5dp" android:viewportHeight="142.0"
-    android:viewportWidth="220.0" android:width="8dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff"
-        android:pathData="M112,49.4c0,10.2 0.3,18.6 0.7,18.6 0.4,0 5.6,-2.8 11.5,-6.2 10.3,-5.9 10.8,-6.4 10.8,-9.5l0,-3.3 5.8,0c5.2,0 6.7,-0.5 15.5,-5.7 5.3,-3.1 9.7,-6 9.7,-6.4 0,-0.4 -2.6,-1.8 -5.7,-3 -5.2,-2 -7.9,-2.3 -27,-2.7l-21.3,-0.4 0,18.6z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M166.1,39.6c-7.9,4.6 -14.7,8.4 -15.2,8.4 -1.7,0 -0.9,1.8 1.7,3.5 3,1.9 5.4,7.1 5.4,11.6 0,2.3 0.4,3 1.5,2.5 2.2,-0.8 32.8,-18.6 34,-19.7 0.6,-0.6 -1.6,-3.5 -6,-7.8l-7,-6.9 -14.4,8.4z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M168,63.1c-5.8,3.3 -11.6,7 -13,8.3 -1.4,1.3 -4.1,2.8 -6,3.5 -1.9,0.6 -11,5.5 -20.2,10.7l-16.8,9.6 0,13.9c0,7.6 0.4,13.9 0.9,13.9 0.5,0 5.7,-2.7 11.5,-6.1l10.5,-6 0.3,-8.7 0.3,-8.7 10.5,-0.5c8.6,-0.5 11.6,-1.1 16.5,-3.4 11.7,-5.3 17.5,-13.9 17.5,-25.9 0,-3.7 -0.3,-6.7 -0.8,-6.7 -0.4,0 -5.4,2.7 -11.2,6.1z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M112.5,70.5c-11.6,6.8 -21.4,12.6 -22,12.8 -0.5,0.3 2.2,3.7 6.1,7.6l7,7.2 18.7,-10.8c10.3,-5.9 18.7,-11.1 18.7,-11.5 0,-0.5 -1.3,-0.8 -3,-0.8l-3,0 0,-8.5c0,-4.7 -0.3,-8.5 -0.7,-8.4 -0.5,0 -10.2,5.6 -21.8,12.4z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="M46.5,84.2c-1.1,0.6 -3.1,2 -4.4,3.2l-2.4,2.1 0.7,-2.8 0.7,-2.8 -5.3,0.3 -5.2,0.3 -1.9,6c-1,3.3 -2.2,8.5 -2.7,11.5 -0.4,3 -1.1,6.5 -1.4,7.7 -0.3,1.3 -0.8,3.1 -1.1,4 -1.7,6.5 -2.3,9.8 -1.9,10.5 0.3,0.4 2.7,0.8 5.4,0.8 6.2,0 7.1,-1.3 8.5,-12.5 1.5,-11.5 5.5,-19.5 9.9,-19.5 2,0 6.5,3.9 4.7,4 -1,0 -1.2,0.3 -0.5,1 0.7,0.7 0.3,4.3 -1.2,11.1 -3.7,16.4 -3.9,15.3 2.9,15.7 4.1,0.2 5.7,-0.1 5.8,-1 0.1,-0.7 0.3,-2.9 0.4,-4.9 0.1,-2.1 0.6,-4.5 1,-5.5 0.4,-1.1 0.9,-2.8 1.1,-3.9 0.7,-4 1.3,-8 1.3,-9.3 0.1,-1.5 5.7,-7.2 7.2,-7.2 0.5,0 2.1,0.7 3.4,1.6 2.9,1.9 3.2,5.2 1.1,11.6 -1.7,5.1 -3.6,14.1 -3.6,16.8 0,1.7 0.7,2 5.4,2 5.8,0 5.9,-0.1 7.2,-7.5 0.4,-1.7 1,-3.7 1.4,-4.5 0.4,-0.8 0.8,-3.3 0.8,-5.5 0,-2.2 0.5,-5.3 1.1,-6.8 2.8,-7.4 -0.7,-14.8 -7.9,-16.7 -3.4,-0.9 -4.7,-0.8 -8.3,0.8 -2.3,1 -4.8,2.6 -5.6,3.5 -1.2,1.5 -1.5,1.5 -3.3,-0.8 -1,-1.3 -3.6,-2.9 -5.6,-3.5 -4.6,-1.2 -5.2,-1.2 -7.7,0.2z" android:strokeColor="#00000000"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="5dp"
+    android:viewportHeight="142.0"
+    android:viewportWidth="220.0"
+    android:width="8dp"
+    >
+    <path
+        android:fillColor="#000000"
+        android:pathData="M112,49.4c0,10.2 0.3,18.6 0.7,18.6 0.4,0 5.6,-2.8 11.5,-6.2 10.3,-5.9 10.8,-6.4 10.8,-9.5l0,-3.3 5.8,0c5.2,0 6.7,-0.5 15.5,-5.7 5.3,-3.1 9.7,-6 9.7,-6.4 0,-0.4 -2.6,-1.8 -5.7,-3 -5.2,-2 -7.9,-2.3 -27,-2.7l-21.3,-0.4 0,18.6z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M166.1,39.6c-7.9,4.6 -14.7,8.4 -15.2,8.4 -1.7,0 -0.9,1.8 1.7,3.5 3,1.9 5.4,7.1 5.4,11.6 0,2.3 0.4,3 1.5,2.5 2.2,-0.8 32.8,-18.6 34,-19.7 0.6,-0.6 -1.6,-3.5 -6,-7.8l-7,-6.9 -14.4,8.4z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M168,63.1c-5.8,3.3 -11.6,7 -13,8.3 -1.4,1.3 -4.1,2.8 -6,3.5 -1.9,0.6 -11,5.5 -20.2,10.7l-16.8,9.6 0,13.9c0,7.6 0.4,13.9 0.9,13.9 0.5,0 5.7,-2.7 11.5,-6.1l10.5,-6 0.3,-8.7 0.3,-8.7 10.5,-0.5c8.6,-0.5 11.6,-1.1 16.5,-3.4 11.7,-5.3 17.5,-13.9 17.5,-25.9 0,-3.7 -0.3,-6.7 -0.8,-6.7 -0.4,0 -5.4,2.7 -11.2,6.1z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M112.5,70.5c-11.6,6.8 -21.4,12.6 -22,12.8 -0.5,0.3 2.2,3.7 6.1,7.6l7,7.2 18.7,-10.8c10.3,-5.9 18.7,-11.1 18.7,-11.5 0,-0.5 -1.3,-0.8 -3,-0.8l-3,0 0,-8.5c0,-4.7 -0.3,-8.5 -0.7,-8.4 -0.5,0 -10.2,5.6 -21.8,12.4z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M46.5,84.2c-1.1,0.6 -3.1,2 -4.4,3.2l-2.4,2.1 0.7,-2.8 0.7,-2.8 -5.3,0.3 -5.2,0.3 -1.9,6c-1,3.3 -2.2,8.5 -2.7,11.5 -0.4,3 -1.1,6.5 -1.4,7.7 -0.3,1.3 -0.8,3.1 -1.1,4 -1.7,6.5 -2.3,9.8 -1.9,10.5 0.3,0.4 2.7,0.8 5.4,0.8 6.2,0 7.1,-1.3 8.5,-12.5 1.5,-11.5 5.5,-19.5 9.9,-19.5 2,0 6.5,3.9 4.7,4 -1,0 -1.2,0.3 -0.5,1 0.7,0.7 0.3,4.3 -1.2,11.1 -3.7,16.4 -3.9,15.3 2.9,15.7 4.1,0.2 5.7,-0.1 5.8,-1 0.1,-0.7 0.3,-2.9 0.4,-4.9 0.1,-2.1 0.6,-4.5 1,-5.5 0.4,-1.1 0.9,-2.8 1.1,-3.9 0.7,-4 1.3,-8 1.3,-9.3 0.1,-1.5 5.7,-7.2 7.2,-7.2 0.5,0 2.1,0.7 3.4,1.6 2.9,1.9 3.2,5.2 1.1,11.6 -1.7,5.1 -3.6,14.1 -3.6,16.8 0,1.7 0.7,2 5.4,2 5.8,0 5.9,-0.1 7.2,-7.5 0.4,-1.7 1,-3.7 1.4,-4.5 0.4,-0.8 0.8,-3.3 0.8,-5.5 0,-2.2 0.5,-5.3 1.1,-6.8 2.8,-7.4 -0.7,-14.8 -7.9,-16.7 -3.4,-0.9 -4.7,-0.8 -8.3,0.8 -2.3,1 -4.8,2.6 -5.6,3.5 -1.2,1.5 -1.5,1.5 -3.3,-0.8 -1,-1.3 -3.6,-2.9 -5.6,-3.5 -4.6,-1.2 -5.2,-1.2 -7.7,0.2z"
+        android:strokeColor="#00000000"
+        />
 </vector>
