--- a/wallet/res/drawable/white_progress.xml
+++ b/wallet/res/drawable/white_progress.xml
@@ -19,7 +19,7 @@
                     />
                 <gradient
                     android:angle="0"
-                    android:endColor="@color/white"
+                    android:endColor="@color/fg_value_black"
                     android:startColor="@android:color/transparent"
                     android:type="sweep"
                     android:useLevel="false"
