--- a/wallet/res/drawable/dash_logo_white.xml
+++ b/wallet/res/drawable/dash_logo_white.xml
@@ -1,30 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:viewportHeight="380.0"
+    android:viewportWidth="392.0"
+    android:width="4.0mm"
+    android:height="4.0mm"
+    >
+
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M91,36.9l-2.5,0.7 -0.3,66.3c-0.2,62.9 -0.1,66.3 1.5,65.6 1.7,-0.6 23.6,-13.1 56.3,-32 7.4,-4.3 15.9,-9.2 18.8,-10.8l5.2,-2.9 0,-11.3c0,-10.3 0.2,-11.5 1.9,-12.5 1.2,-0.6 9.9,-1 21.5,-1l19.5,0 14.3,-8.3c7.9,-4.6 23.9,-13.9 35.6,-20.7 11.6,-6.8 21.2,-12.8 21.2,-13.2 0,-1.3 -15.6,-8.7 -25.1,-11.9 -16.5,-5.5 -24.9,-6.9 -47.9,-7.9 -24.7,-1.1 -116.3,-1.1 -120,-0.1z" android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M330,43.2c-10,5.8 -16.9,9.8 -38,22 -5.2,3 -21,12.2 -35,20.3 -14,8.1 -26.1,15.2 -26.8,15.8 -1,0.8 -0.1,1.6 3.7,3.4 2.7,1.3 7.5,4.9 10.5,7.9 9.4,9.4 14.3,22.5 14.6,39.3 0,4.7 0.3,8.8 0.6,9.2 0.2,0.4 4.4,-1.5 9.2,-4.3 4.8,-2.8 15.9,-9.2 24.7,-14.3 18.5,-10.6 29.6,-17.1 48.5,-28 26.8,-15.5 37.6,-21.8 42.8,-24.7 2.8,-1.6 5.2,-3.2 5.2,-3.6 0,-0.7 -48.3,-49.2 -49,-49.2 -0.3,0.1 -5.2,2.8 -11,6.2z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M329.5,134.2c-6.3,3.3 -44.7,25.3 -59.5,34.1 -10.2,6.1 -15.3,10 -21,15.7 -8.3,8.4 -12.8,11 -24,13.8 -9,2.3 -14.2,4.8 -41.5,20.5 -11.5,6.6 -26.6,15.3 -33.5,19.2 -6.9,3.9 -20.1,11.6 -29.5,17 -9.3,5.4 -20.5,11.8 -24.7,14.2l-7.8,4.4 0,50.5c0,27.7 0.2,50.4 0.6,50.4 0.3,0 10,-5.5 21.7,-12.2 11.7,-6.6 29.9,-17.1 40.5,-23.1l19.2,-11 0,-31.8c0,-17.5 0.4,-32 0.9,-32.3 0.5,-0.3 11.6,-0.8 24.7,-1.2 35.8,-0.8 48.5,-2.5 66.8,-8.6 16.1,-5.3 31.5,-14.3 43.4,-25.1 12.5,-11.5 24,-30.9 28.2,-47.7 3.6,-14.3 4.1,-49.1 0.7,-49 -0.7,0.1 -3,1 -5.2,2.2z"
+        android:strokeColor="#00000000"
+        />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M157.5,142.8c-6,3.5 -15.5,9 -21,12.2 -5.5,3.2 -15.6,9 -22.5,13 -6.9,4 -17.2,9.9 -23,13.3 -5.8,3.3 -14.1,8.1 -18.5,10.7 -4.4,2.6 -12.7,7.4 -18.5,10.7 -34.3,19.9 -44.4,25.9 -44.8,27.1 -0.2,0.8 9.8,11.6 23.5,25.4l23.9,23.9 13,-7.4c16.7,-9.6 41.6,-23.9 62.4,-35.9 35.3,-20.4 41.8,-24.2 51.2,-29.6 5.4,-3 9.7,-5.6 9.5,-5.8 -0.1,-0.1 -4.9,-0.5 -10.7,-0.9 -5.8,-0.4 -10.8,-0.9 -11.2,-1.1 -0.5,-0.3 -0.8,-14.2 -0.8,-30.9 0,-16.7 -0.3,-30.6 -0.7,-30.8 -0.5,-0.2 -5.7,2.5 -11.8,6.1z"
+        android:strokeColor="#00000000"
+        />
+
+
+
+</vector>
+
+
+
+<!--<path-->
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="1438.15dp"
     android:height="421.17dp"
     android:viewportWidth="1438.15"
     android:viewportHeight="421.17"
     >
-
-    <path
-        android:fillColor="#000000"
-        android:pathData="M312.66,26.11H147.23l-13.71,76.63,149.28 0.18 c73.52,0,95.26,26.69,94.64,71-0.32,22.7-10.16,61.07-14.41,73.51-11.33,33.16-34.6,71-121.86,70.85l-145.11-0.06L82.32,394.88H247.38c58.22,0,83-6.77,109.2-18.89,58.13-26.84,92.72-84.21,106.57-159.08C483.79,105.42,458.09,26.11,312.66,26.11Z"
-        />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M75.85,172c-43.33,0-49.54,28.24-53.64,45.3-5.37,22.35-7.13,31.4-7.13,31.4H184.46c43.33,0,49.54-28.24,53.64-45.3,5.37-22.35,7.13-31.4,7.13-31.4Z"
-        />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M824.28,395.06l11.66-66.63H977.26c11.1,0,18.88-6.67,20.54-17.77,2.22-11.11-3.33-17.77-14.43-17.77H915.8c-53.31,0-78.85-31.09-69.41-84.4s46.09-84.39,99.39-84.39h153.53l-12.21,66.63H951.79c-11.11,0-18.88,6.66-20.55,17.76-2.22,11.11,3.33,17.77,14.44,17.77h67.57c53.3,0,78.84,31.1,69.41,84.4s-45.54,84.4-98.84,84.4Z"
-        />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M609.06,395.05c-87.74,0-127.17-47.76-111.62-135.5,15-87.73,71.64-135.49,159.37-135.49H812.3l-47.76,271ZM710.12,190.7h-40c-47.75,0-76,21.1-84.29,68.85-8.88,47.76,8.89,68.86,56.64,68.86h43.76Z"
-        />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M1292,395.05l27.77-157.71c5-31.1-7.62-44.42-38.72-44.42h-44.22l-35.54,202.13h-90l65.07-368.94h90l-17.32,98h67.4c78.85,0,107.17,34.43,93.29,113.28l-27.77,157.71Z"
-        />
-</vector>
+-->
+<!--android:fillColor="#000000"-->
+<!--android:pathData="M312.66,26.11H147.23l-13.71,76.63,149.28 0.18 c73.52,0,95.26,26.69,94.64,71-0.32,22.7-10.16,61.07-14.41,73.51-11.33,33.16-34.6,71-121.86,70.85l-145.11-0.06L82.32,394.88H247.38c58.22,0,83-6.77,109.2-18.89,58.13-26.84,92.72-84.21,106.57-159.08C483.79,105.42,458.09,26.11,312.66,26.11Z"-->
+    <!--/>-->
+<!--<path-->
+<!--android:fillColor="#000000"-->
+<!--android:pathData="M75.85,172c-43.33,0-49.54,28.24-53.64,45.3-5.37,22.35-7.13,31.4-7.13,31.4H184.46c43.33,0,49.54-28.24,53.64-45.3,5.37-22.35,7.13-31.4,7.13-31.4Z"-->
+    <!--/>-->
+<!--<path-->
+<!--android:fillColor="#000000"-->
+<!--android:pathData="M824.28,395.06l11.66-66.63H977.26c11.1,0,18.88-6.67,20.54-17.77,2.22-11.11-3.33-17.77-14.43-17.77H915.8c-53.31,0-78.85-31.09-69.41-84.4s46.09-84.39,99.39-84.39h153.53l-12.21,66.63H951.79c-11.11,0-18.88,6.66-20.55,17.76-2.22,11.11,3.33,17.77,14.44,17.77h67.57c53.3,0,78.84,31.1,69.41,84.4s-45.54,84.4-98.84,84.4Z"-->
+    <!--/>-->
+<!--<path-->
+<!--android:fillColor="#000000"-->
+<!--android:pathData="M609.06,395.05c-87.74,0-127.17-47.76-111.62-135.5,15-87.73,71.64-135.49,159.37-135.49H812.3l-47.76,271ZM710.12,190.7h-40c-47.75,0-76,21.1-84.29,68.85-8.88,47.76,8.89,68.86,56.64,68.86h43.76Z"-->
+    <!--/>-->
+<!--<path-->
+<!--android:fillColor="#000000"-->
+<!--android:pathData="M1292,395.05l27.77-157.71c5-31.1-7.62-44.42-38.72-44.42h-44.22l-35.54,202.13h-90l65.07-368.94h90l-17.32,98h67.4c78.85,0,107.17,34.43,93.29,113.28l-27.77,157.71Z"-->
+    <!--/>-->
