--- a/wallet/res/layout/nav_header_main.xml
+++ b/wallet/res/layout/nav_header_main.xml
@@ -26,8 +26,8 @@
         />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
         android:layout_marginRight="18dp"
