--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -8,21 +8,77 @@
         <item name="actionMenuTextColor">@color/fg_value_black</item>
         <item name="android:textViewStyle">@style/MontserratTextViewStyle</item>
         <item name="android:editTextStyle">@style/My.Widget.EditText</item>
-        <item name="android:textColorSecondary">@color/fg_value_black</item>
         <item name="android:autoCompleteTextViewStyle">@style/My.Widget.AutoCompleteTextView</item>
         <item name="android:checkboxStyle">@style/CheckboxStyle</item>
         <item name="android:spinnerStyle">@style/My.Widget.Spinner</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionModeOverlay">true</item>
-        <item name="actionModeBackground">@color/colorPrimary</item>
-        <item name="android:actionBarStyle">@style/My.Widget.ActionBar</item>
-        <item name="alertDialogTheme">@style/NewDialogTheme</item>
+
+
+        <!--<item name="actionModeBackground">@color/colorPrimary</item>-->
+        <!--<item name="android:actionBarStyle">@style/My.Widget.ActionBar</item>-->
+        <!--<item name="alertDialogTheme">@style/NewDialogTheme</item>-->
+
+        <!--<item name="android:dropDownListViewStyle">@style/PopupMenuLisView</item>-->
+        <!--<item name="android:popupMenuStyle">@style/PopupMenu</item>t-->
+
+
+        <item name="android:textColorSecondary">@color/fg_value_black</item>
+        <item name="android:actionBarWidgetTheme">@style/ActionBarWidgetThemeSearch</item>
+
+
+    </style>
+
+
+    <!--SearchView in the action bar-->
+    <style name="ActionBarWidgetThemeSearch">
+        <!--Close Icon-->
+        <item name="android:textColorSecondary">@color/fg_value_black</item>
+
+        <!--Text you enter-->
+        <item name="android:textColorPrimary">@color/fg_value_black</item>
+
+        <!--Cursor-->
+        <item name="android:colorControlActivated">@color/fg_value_black</item>
+
+        <!--hint color-->
+        <item name="android:textColorHint">#690F0F</item>
+    </style>
+
+
+    <!-- Change Overflow Menu ListView Divider Property -->
+    <style name="PopupMenuListView" parent="@android:style/Widget.Holo.ListView.DropDown">
+        <item name="android:divider">#FF0000</item>
+        <item name="android:dividerHeight">0.5dp</item>
+    </style>
+
+    <!-- Change Overflow Menu ListView Text Size and Text Size -->
+    <style name="PopupMenuTextView" parent="@android:style/android:Theme.Holo.Light">
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:textSize">5sp</item>
+    </style>
+
+
+    <!-- Change Overflow Menu Background Color of single item menu in ExchangeRates Screen -->
+    <style name="PopupMenu" parent="android:Widget.Holo.Light.ListPopupWindow">
+        <item name="android:popupBackground">#888888</item>
+    </style>
+
+
+    <style name="MyTheme.ActionBarStyle" parent="android:Widget.TextView">
+        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/fg_value_black</item>
+        <item name="android:color">#E40D0D</item>
+        <item name="android:collapseIcon">@drawable/ic_warning</item>
+
     </style>
 
     <style name="yourDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
 
         <item name="android:colorAccent">@color/fg_value_black</item>
-        <item name="android:colorPrimary">@color/fg_value_black</item>
 
     </style>
 
@@ -35,7 +91,7 @@
     </style>
 
     <style name="CustomMainActivityThemeWithDots" parent="Theme.AppCompat.Light.NoActionBar">
-        <!--<item name="actionOverflowButtonStyle">@style/threeDotsTheme</item>-->
+        <item name="actionOverflowButtonStyle">@style/threeDotsTheme</item>
         <item name="android:textSize">11dp</item>
     </style>
 
