--- a/wallet/res/menu/wallet_options.xml
+++ b/wallet/res/menu/wallet_options.xml
@@ -18,7 +18,7 @@
 		android:title="@string/request_coins_activity_title"
 		android:titleCondensed="@string/button_request_coins"
 		android:visible="@bool/wallet_actions_top"
-		app:showAsAction="ifRoom"
+		app:showAsAction="never"
 		/>
 
 	<item
@@ -27,21 +27,24 @@
 		android:title="@string/send_coins_activity_title"
 		android:titleCondensed="@string/button_send_coins"
 		android:visible="@bool/wallet_actions_top"
-		app:showAsAction="ifRoom"
+		app:showAsAction="never"
 		/>
 
 	<item
-		android:id="@+id/wallet_options_help"
+		android:id="@+id/wallet_options_report_issue"
+		android:title="@string/preferences_report_issue_title"
 		android:showAsAction="never"
-		android:orderInCategory="999"
-		android:title="@string/button_help"
 		/>
 
-    <item
-        android:id="@+id/wallet_options_report_issue"
-        android:showAsAction="never"
-        android:title="@string/preferences_report_issue_title"
+
+	<item
+		android:id="@+id/wallet_options_help"
+		android:orderInCategory="999"
+		android:title="@string/button_help"
+		android:showAsAction="never"
 		/>
+
+
 
 
 </menu>
