--- a/wallet/testNet3/res/xml/shortcuts.xml
+++ b/wallet/testNet3/res/xml/shortcuts.xml
@@ -7,7 +7,7 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetClass="net.paccoin.wallet.ui.SendCoinsQrActivity"
-            android:targetPackage="hashengineering.darkcoin.wallet_test" />
+            android:targetPackage="paccommunity.pac.wallet_test" />
     </shortcut>
     <shortcut
         android:icon="@drawable/shortcut_send_coins"
@@ -16,7 +16,7 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetClass="net.paccoin.wallet.ui.send.SendCoinsActivity"
-            android:targetPackage="hashengineering.darkcoin.wallet_test" />
+            android:targetPackage="paccommunity.pac.wallet_test" />
     </shortcut>
     <shortcut
         android:icon="@drawable/shortcut_request_coins"
@@ -25,7 +25,7 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetClass="net.paccoin.wallet.ui.RequestCoinsActivity"
-            android:targetPackage="hashengineering.darkcoin.wallet_test" />
+            android:targetPackage="paccommunity.pac.wallet_test" />
     </shortcut>
 
 </shortcuts>
