Corrected the BUG-PAC-0002, 0004, 0006

--- a/common/src/main/res/layout/dialog_title.xml
+++ b/common/src/main/res/layout/dialog_title.xml
@@ -8,5 +8,5 @@
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
     android:paddingTop="24dp"
-    style="@style/MontserratSemiBold"
+    style="@style/GothamSemiBold"
     />
