--- a/wallet/res/layout-land/request_coins_fragment.xml
+++ b/wallet/res/layout-land/request_coins_fragment.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             tools:text="@string/request_coins_fragment_initiate_request_qr"
-            style="@style/MontserratMedium.DB.14"
+            style="@style/GothamMedium.DB.14"
             />
 
     </LinearLayout>
