--- a/wallet/res/layout/encrypt_new_key_chain_dialog.xml
+++ b/wallet/res/layout/encrypt_new_key_chain_dialog.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/encrypt_new_key_chain_upgrade_button"
-            style="@style/MontserratButton"
+            style="@style/GothamButton"
             />
 
     </LinearLayout>
