--- a/wallet/res/layout/fancy_list_content.xml
+++ b/wallet/res/layout/fancy_list_content.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        style="@style/MontserratSemiBold.DB.14"
+        style="@style/GothamSemiBold.DB.14"
         />
 
 </FrameLayout>
