--- a/wallet/res/layout/peer_list_row.xml
+++ b/wallet/res/layout/peer_list_row.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="/Dash Core:0.12.3.2/\nprotocol: 70210"
-        style="@style/MontserratMedium.MG.12"
+        style="@style/GothamMedium.MG.12"
         />
 
     <TextView
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         tools:text="45.12.345.678:9999"
-        style="@style/MontserratSemiBold.DB.14"
+        style="@style/GothamSemiBold.DB.14"
         />
 
     <TextView
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         tools:text="935826 blocks"
-        style="@style/MontserratSemiBold.DB.12"
+        style="@style/GothamSemiBold.DB.12"
         />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="123 ms"
-        style="@style/MontserratMedium.MG.12"
+        style="@style/GothamMedium.MG.12"
         />
 
 </RelativeLayout>
