--- a/common/src/main/res/values/values.xml
+++ b/common/src/main/res/values/values.xml
@@ -22,8 +22,8 @@
 		<item>@string/preferences_precision_labels_0_6</item>
 	</string-array>
 	<string-array name="preferences_block_explorer_values">
-		<item>http://insight.dash.org/insight/</item>
-		<item>http://explorer.dash.org/chain/Dash/</item>
+		<item>http://explorer.pachub.io/</item>
+		<item>http://usa.pacblockexplorer.com:3002/</item>
 	</string-array>
 	<string-array name="preferences_block_explorer_labels">
 		<item>$PAC Insight Block Explorer</item>
