--- a/uphold-integration/src/main/res/layout/uphold_splash_screen.xml
+++ b/uphold-integration/src/main/res/layout/uphold_splash_screen.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/uphold_buy_dash_with_uphold"
-                style="@style/MontserratMedium.DB.14"/>
+                style="@style/GothamMedium.DB.14"/>
 
         </LinearLayout>
 
@@ -73,13 +73,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/uphold_transfer_to_this_wallet"
-                style="@style/MontserratMedium.DB.14"/>
+                style="@style/GothamMedium.DB.14"/>
 
         </LinearLayout>
 
         <Button
             android:id="@+id/uphold_link_account"
-            style="@style/MontserratButton"
+            style="@style/GothamButton"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
