--- a/wallet/devNet/res/values/values.xml
+++ b/wallet/devNet/res/values/values.xml
@@ -11,11 +11,11 @@
 		<item>0/6</item>
 	</string-array>
 	<string-array name="preferences_precision_labels">
-		<item>tDASH, 8 decimal places</item>
-		<item>tDASH, 6 decimal places</item>
-		<item>tDASH, 4 decimal places</item>
-		<item>mtDASH, 2 decimal places</item>
-		<item>µtDASH, no decimal places</item>
+		<item>t$PAC, 8 decimal places</item>
+		<item>t$PAC, 6 decimal places</item>
+		<item>t$PAC, 4 decimal places</item>
+		<item>mt$PAC, 2 decimal places</item>
+		<item>µt$PAC, no decimal places</item>
 	</string-array>
 	<string-array name="preferences_block_explorer_values">
 		<item>https://test.insight.dash.siampm.com/</item>
