--- a/wallet/res/layout/backup_wallet_to_seed_dialog.xml
+++ b/wallet/res/layout/backup_wallet_to_seed_dialog.xml
@@ -35,7 +35,7 @@
                     android:layout_marginTop="@dimen/list_entry_padding_vertical"
                     android:layout_weight="2"
                     android:text="@string/backup_to_seed_wallet_dialog_enter_pin_message"
-                    style="@style/MontserratRegular.DB.12"
+                    style="@style/GothamRegular.DB.12"
                     />
 
             </LinearLayout>
@@ -59,7 +59,7 @@
                     android:inputType="numberPassword"
                     android:singleLine="true"
                     android:textSize="@dimen/dialog_input_text_size"
-                    style="@style/MontserratMedium"
+                    style="@style/GothamMedium"
                     />
 
                 <Button
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/backup_wallet_to_seed_show_recovery_phrase"
-                    style="@style/MontserratButton"
+                    style="@style/GothamButton"
                     />
 
             </LinearLayout>
@@ -80,7 +80,7 @@
                 android:text="@string/private_key_bad_password"
                 android:textColor="@color/fg_error"
                 android:textSize="12sp"
-                style="@style/MontserratSemiBold"
+                style="@style/GothamSemiBold"
                 android:visibility="gone"
                 />
 
@@ -109,7 +109,7 @@
                 android:layout_marginBottom="@dimen/list_entry_padding_vertical"
                 android:layout_marginTop="@dimen/list_entry_padding_vertical"
                 android:text="@string/backup_to_seed_wallet_dialog_message"
-                style="@style/MontserratMedium.DB.12"
+                style="@style/GothamMedium.DB.12"
                 />
 
             <LinearLayout
@@ -128,7 +128,7 @@
                     android:layout_weight="3"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp"
-                    style="@style/MontserratSemiBold"
+                    style="@style/GothamSemiBold"
                     />
 
             </LinearLayout>
@@ -149,7 +149,7 @@
                     android:textColor="@color/fg_error"
                     android:textStyle="bold"
                     android:visibility="invisible"
-                    style="@style/MontserratSemiBold"
+                    style="@style/GothamSemiBold"
                     />
 
             </LinearLayout>
@@ -158,7 +158,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/backup_wallet_to_seed_dialog_warning"
-                style="@style/MontserratRegular.MG.12"
+                style="@style/GothamRegular.MG.12"
                 />
 
             <net.paccoin.wallet.ui.widget.MontserratCheckBox
