--- a/wallet/res/layout/block_row_transaction.xml
+++ b/wallet/res/layout/block_row_transaction.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        style="@style/MontserratMedium.MG.14"
+        style="@style/GothamMedium.MG.14"
         tools:text="Xb3VrYwNhwcPou9wVko9DbfBsZg8EbMkDm"
         />
 
@@ -28,7 +28,7 @@
         android:layout_weight="1"
         android:gravity="left"
         android:singleLine="true"
-        style="@style/MontserratMedium.MG.14"
+        style="@style/GothamMedium.MG.14"
         />
 
     <org.dash.wallet.common.ui.CurrencyTextView
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginLeft="8dp"
-        style="@style/MontserratMedium.MG.14"
+        style="@style/GothamMedium.MG.14"
         />
 
 </LinearLayout>
