--- a/wallet/res/layout/edit_address_book_entry_dialog.xml
+++ b/wallet/res/layout/edit_address_book_entry_dialog.xml
@@ -8,7 +8,7 @@
         android:id="@+id/edit_address_book_entry_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/MontserratMedium.DB.14"
+        style="@style/GothamMedium.DB.14"
         android:hint="@string/edit_address_book_entry_dialog_address_label"
         android:enabled="false"
         android:focusable="false"
@@ -22,7 +22,7 @@
         android:id="@+id/edit_address_book_entry_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/MontserratMedium.DB.14"
+        style="@style/GothamMedium.DB.14"
         android:hint="@string/edit_address_book_entry_dialog_label_label"
         android:imeOptions="flagNoExtractUi"
         android:inputType="textPersonName"
