--- a/wallet/res/layout/fastest_payment_network_dialog.xml
+++ b/wallet/res/layout/fastest_payment_network_dialog.xml
@@ -41,7 +41,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/MontserratMedium"
+            style="@style/GothamMedium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -57,7 +57,7 @@
 
         <TextView
             android:id="@+id/message"
-            style="@style/MontserratMedium"
+            style="@style/GothamMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -71,7 +71,7 @@
 
         <Button
             android:id="@+id/button"
-            style="@style/MontserratButton.Inverted"
+            style="@style/GothamButton.Inverted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
