--- a/wallet/res/layout/peer_list_fragment.xml
+++ b/wallet/res/layout/peer_list_fragment.xml
@@ -17,7 +17,7 @@
         android:background="@color/bg_bright"
         android:gravity="center"
         android:text="@string/peer_list_fragment_empty"
-        style="@style/MontserratSemiBold.DB.14"
+        style="@style/GothamSemiBold.DB.14"
         />
 
     <android.support.v7.widget.RecyclerView
