--- a/wallet/res/layout/restore_wallet_dialog.xml
+++ b/wallet/res/layout/restore_wallet_dialog.xml
@@ -17,14 +17,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding"
-            style="@style/MontserratRegular.DB.12"/>
+            style="@style/GothamRegular.DB.12"/>
 
         <Spinner
             android:id="@+id/import_keys_from_storage_file"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
-            style="@style/MontserratMedium.DB.12">
+            style="@style/GothamMedium.DB.12">
 
             <requestFocus />
 
@@ -38,7 +38,7 @@
             android:hint="@string/import_export_keys_dialog_password"
             android:inputType="textPassword"
             android:singleLine="true"
-            style="@style/MontserratMedium.DB.14"/>
+            style="@style/GothamMedium.DB.14"/>
 
         <net.paccoin.wallet.ui.widget.MontserratCheckBox
             android:id="@+id/import_keys_from_storage_show"
@@ -56,7 +56,7 @@
             android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding"
             android:text="@string/restore_wallet_dialog_replace_warning"
-            style="@style/MontserratMedium.DB.12"/>
+            style="@style/GothamMedium.DB.12"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             android:layout_marginBottom="@dimen/list_entry_padding"
             android:layout_marginTop="@dimen/list_entry_padding"
             android:text="@string/import_keys_dialog_warning"
-            style="@style/MontserratMedium.DB.12"/>
+            style="@style/GothamMedium.DB.12"/>
 
     </LinearLayout>
 
