--- a/wallet/res/layout/transaction_row_warning.xml
+++ b/wallet/res/layout/transaction_row_warning.xml
@@ -16,7 +16,7 @@
         android:paddingLeft="@dimen/space_medium"
         android:paddingRight="@dimen/space_medium"
         android:paddingTop="@dimen/list_entry_padding"
-        style="@style/MontserratMedium.MG.12"
+        style="@style/GothamMedium.MG.12"
         />
 
     <View style="@style/ListSeparator" />
