--- a/wallet/res/layout/unlock_wallet_dialog.xml
+++ b/wallet/res/layout/unlock_wallet_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dialog_text_content_spacing"
         android:text="@string/wallet_lock_unlock_dialog_message"
-        style="@style/MontserratRegular.DB.12"
+        style="@style/GothamRegular.DB.12"
         />
 
     <LinearLayout
@@ -31,7 +31,7 @@
             android:imeOptions="flagNoExtractUi"
             android:inputType="numberPassword"
             android:singleLine="true"
-            style="@style/MontserratMedium"
+            style="@style/GothamMedium"
             />
 
         <Button
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/wallet_lock_unlock"
-            style="@style/MontserratButton"
+            style="@style/GothamButton"
             />
 
     </LinearLayout>
@@ -55,7 +55,7 @@
         android:layout_marginTop="2dp"
         android:textSize="12sp"
         android:visibility="gone"
-        style="@style/MontserratSemiBold"
+        style="@style/GothamSemiBold"
         />
 
     <net.paccoin.wallet.ui.widget.FingerprintView
