Fixed bugs BUG-PAC-0001, 0005, and 0006

--- a/wallet/res/layout/ext_app_bar_layout.xml
+++ b/wallet/res/layout/ext_app_bar_layout.xml
@@ -8,9 +8,12 @@
     android:layout_height="?attr/actionBarSize"
     app:contentInsetStartWithNavigation="0dp"
     app:contentInsetEndWithActions="0dp"
-    app:popupTheme="@style/My.PopupOverlay"
-    android:theme="@style/threeDotsTheme"
+
     >
+    <!--app:popupTheme="@style/OptionMenuItemStyle"-->
+
+    <!--android:theme="@style/threeDotsTheme"-->
+
 
     <RelativeLayout
         android:layout_width="match_parent"
