--- a/wallet/res/layout/report_issue_dialog.xml
+++ b/wallet/res/layout/report_issue_dialog.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:scrollbars="none"
-    android:theme="@style/yourDialog"
-    >
+    android:scrollbars="none" >
+    <!--android:theme="@style/yourDialog"-->
+
 
     <LinearLayout style="@style/DialogContainer">
 
