--- a/common/src/main/res/layout/app_bar_general.xml
+++ b/common/src/main/res/layout/app_bar_general.xml
@@ -14,8 +14,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/threeDotsTheme"
-
         />
+        <!--app:theme="@style/threeDotsTheme"-->
+
+
 
 </android.support.design.widget.AppBarLayout>
