--- a/common/src/main/res/layout/app_bar_main.xml
+++ b/common/src/main/res/layout/app_bar_main.xml
@@ -16,9 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:theme="@style/MyTheme.ActionBarStyle"
-        app:popupTheme="@style/My.PopupOverlay"
+        app:popupTheme="@style/OptionMenuItemStyle"
         >
+
+        <!--android:theme="@style/MyTheme.ActionBarStyle"-->
 
         <fragment
             android:id="@+id/wallet_balance_fragment_toolbar"
