--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,106 +17,37 @@
         <item name="actionModeBackground">@color/colorPrimary</item>
         <item name="android:actionBarStyle">@style/My.Widget.ActionBar</item>
         <item name="alertDialogTheme">@style/NewDialogTheme</item>
-
-
-        <item name="android:actionModeBackground">@android:color/black</item>
-        <item name="android:actionModeCloseDrawable">@drawable/ic_warning</item>
-
-
-        <item name="actionModeStyle">@style/CustomActionModeStyle</item>
-        <item name="android:actionOverflowButtonStyle">@style/overFlowButtonStyle</item>
-z
-
-        <item name="android:listPreferredItemHeightSmall">50dp</item>
-        <item name="android:listPreferredItemPaddingLeft">5dp</item>
-        <item name="android:listPreferredItemHeight">20dp</item>
-        <item name="android:listPreferredItemHeightLarge">40dp</item>
-
-
-
-
-        <!--<item name="actionOverflowMenuStyle">@style/CMOptionsMenu</item>-->
-
-
+        <item name="android:actionOverflowButtonStyle">@style/threeDotsTheme</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
     </style>
 
 
-    <!--MY STYLES ADDED-->
+    <!--CUSTOM-->
+
+
+    <style name="OptionMenuItemStyle" parent="ThemeOverlay.AppCompat.Light">
+        <item name="fontFamily">@font/gotham_light</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/fg_value_black</item>
+        <item name="android:textAlignment">inherit</item>
+        <item name="android:layout_width">250dp</item>
+    </style>
+
 
     <style name="threeDotsTheme" parent="@style/Widget.AppCompat.ActionButton.Overflow">
         <item name="android:tint">@color/fg_value_black</item>
     </style>
 
-
-    <style name="viewPagerTitleStrip">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">14sp</item>
-    </style>
-
-
-    <style name="yourDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/fg_value_black</item>
-    </style>
-
-
-    <style name="MyTheme.ActionBarStyle" parent="android:Widget.TextView">
-        <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
-    </style>
-
-
-    <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/fg_value_black</item>
-        <item name="android:color">#E40D0D</item>
-        <item name="collapseIcon">@drawable/ic_warning</item>
-    </style>
+    <!--/CUSTOM-->
 
 
 
-    <style name="custom_toolbar" parent="@style/Widget.AppCompat.Toolbar">
-        <item name="titleTextColor">@color/fg_value_black</item>
-    </style>
 
-
-    <style name="CustomActionModeStyle" parent="Base.Widget.AppCompat.ActionMode">
-        <item name="background">@color/colorPrimary</item>
-        <item name="titleTextStyle">@style/CustomeActionModeTextStyle</item>
-    </style>
-
-
-    <style name="CustomeActionModeTextStyle" parent="TextAppearance.AppCompat.Widget.ActionMode.Title">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/fg_value_black</item>
-    </style>
-
-
-    <style name="ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:actionOverflowButtonStyle">@style/overFlowButtonStyle</item>
-    </style>
-
-
-    <style name="overFlowButtonStyle" parent="Widget.AppCompat.Light.ActionButton.Overflow">
-        <item name="android:minWidth">5dip</item>
-        <item name="android:maxWidth">5dip</item>
-        <item name="android:padding">15dip</item>
-        <item name="android:tint">@color/fg_value_black</item>
-    </style>
-
-
-
-    <style name="CMOptionsMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
-        <item name="android:popupBackground">@color/vivid_red</item>
-        <item name="overlapAnchor">false</item>
-    </style>
-
-
-    <!--/MY STYLES ADDED-->
 
 
 
     <style name="GothamTextViewStyle" parent="android:Widget.TextView">
-        <item name="android:fontFamily">@font/gotham_book</item>
+        <item name="android:fontFamily">@font/gotham</item>
     </style>
 
     <style name="CheckboxStyle" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
@@ -186,7 +117,7 @@ z
     </style>
 
     <style name="My.TextAppearance.Widget.ActionBar.Title" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/fg_value_black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/gotham_medium</item>
     </style>
@@ -227,8 +158,8 @@ z
     </style>
 
     <style name="My.Widget.Button.Borderless.Small" parent="@android:style/Widget.Holo.Button.Borderless.Small">
-        <item name="android:minWidth">40dp</item>
-        <item name="android:minHeight">40dp</item>
+        <!--<item name="android:minWidth">40dp</item>
+        <item name="android:minHeight">40dp</item>-->
     </style>
 
     <style name="My.Widget.CompoundButton.CheckBox" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
@@ -242,7 +173,7 @@ z
     </style>
 
     <style name="GothamRegular">
-        <item name="fontFamily">@font/gotham_medium</item>
+        <item name="fontFamily">@font/gotham</item>
     </style>
 
     <style name="GothamRegular.DB">
@@ -348,8 +279,7 @@ z
 
     <style name="NavigationTheme" parent="My.Theme">
         <item name="fontFamily">@font/gotham_medium</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:paddingVertical">35dp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <!--style name="My.Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -407,10 +337,10 @@ z
     </style>
 
     <style name="ListSeparator">
-        <item name="android:alpha">1</item>
-        <item name="android:background">@color/vivid_red</item>
+        <item name="android:alpha">0.25</item>
+        <item name="android:background">@color/gray</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_height">1dp</item>
     </style>
 
     <style name="ExtendedTransactions">
@@ -454,32 +384,30 @@ z
         <item name="android:paddingLeft">24dp</item>
         <item name="android:paddingRight">24dp</item>
         <item name="android:paddingBottom">24dp</item>
-        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingTop">8dp</item>
         <item name="android:orientation">vertical</item>
     </style>
-
-
-
+    <!--
     <style name="My.Widget.ActionButton.Overflow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
         <item name="android:minHeight">?android:attr/actionBarSize</item>
         <item name="android:minWidth">48dp</item>
     </style>
 
     <style name="My.Widget.ActionMode" parent="@android:style/Widget.Holo.Light.ActionMode.Inverse">
-        <!--<item name="android:background">@drawable/action_mode_background</item>-->
+        <item name="android:background">@drawable/action_mode_background</item>
         <item name="android:titleTextStyle">@style/My.TextAppearance.Widget.ActionMode.Title</item>
         <item name="android:subtitleTextStyle">@style/My.TextAppearance.Widget.ActionMode.Subtitle</item>
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Title" parent="@android:style/TextAppearance.Holo.Widget.ActionMode.Title">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:shadowColor">@android:color/black</item>
         <item name="android:shadowRadius">1</item>
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Subtitle" parent="@android:style/TextAppearance.Holo.Widget.ActionMode.Subtitle">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">normal</item>
     </style>
 
@@ -488,45 +416,42 @@ z
         <item name="android:textSize">@dimen/font_size_normal</item>
     </style>
 
-
-    <!--<style name="My.Widget.Button.Borderless" parent="@android:style/Widget.Holo.Button.Borderless">-->
-        <!--<item name="android:paddingLeft">8dp</item>-->
-        <!--<item name="android:paddingRight">8dp</item>-->
-        <!--<item name="android:drawablePadding">8dp</item>-->
-    <!--</style>-->
-
-    <!--<style name="My.Widget.Button.Borderless.Unpadded" parent="@android:style/Widget.Holo.Button.Borderless">-->
-        <!--<item name="android:padding">0px</item>-->
-        <!--<item name="android:drawablePadding">0px</item>-->
-    <!--</style>-->
-
-    <!--<style name="My.Widget.Button.Borderless.Small" parent="@android:style/Widget.Holo.Button.Borderless.Small">-->
-        <!--<item name="android:minWidth">40dp</item>-->
-        <!--<item name="android:minHeight">40dp</item>-->
-    <!--</style>-->
-
-    <!--<style name="My.Widget.CompoundButton.CheckBox" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">-->
-        <!--<item name="android:textColor">@color/fg_significant</item>-->
-        <!--<item name="android:textSize">@dimen/font_size_normal</item>-->
-    <!--</style>-->
-
-    <!--<style name="My.Widget.Spinner" parent="@android:style/Widget.Holo.Light.Spinner">-->
-        <!--<item name="android:textColor">@color/fg_significant</item>-->
-        <!--<item name="android:textSize">@dimen/font_size_normal</item>-->
-    <!--</style>-->
-
-    <style name="My.Widget.PopupMenu" parent="@android:style/Widget.Holo.Light.PopupMenu" >
-        <item name="android:layout_width">64dp</item>
-        <item name="android:layout_height">30dp</item>
-        <item name="android:width">64dp</item>
+    <style name="My.Widget.EditText" parent="@android:style/Widget.Holo.Light.EditText">
+        <item name="android:textColor">@color/fg_significant</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
     </style>
 
+    <style name="My.Widget.AutoCompleteTextView" parent="@android:style/Widget.Holo.Light.AutoCompleteTextView">
+        <item name="android:textColor">@color/fg_significant</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
+    </style>
 
+    <style name="My.Widget.Button.Borderless" parent="@android:style/Widget.Holo.Button.Borderless">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:drawablePadding">8dp</item>
+    </style>
 
+    <style name="My.Widget.Button.Borderless.Unpadded" parent="@android:style/Widget.Holo.Button.Borderless">
+        <item name="android:padding">0px</item>
+        <item name="android:drawablePadding">0px</item>
+    </style>
 
+    <style name="My.Widget.Button.Borderless.Small" parent="@android:style/Widget.Holo.Button.Borderless.Small">
+        <item name="android:minWidth">40dp</item>
+        <item name="android:minHeight">40dp</item>
+    </style>
 
+    <style name="My.Widget.CompoundButton.CheckBox" parent="@android:style/Widget.Holo.Light.CompoundButton.CheckBox">
+        <item name="android:textColor">@color/fg_significant</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
+    </style>
 
+    <style name="My.Widget.Spinner" parent="@android:style/Widget.Holo.Light.Spinner">
+        <item name="android:textColor">@color/fg_significant</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
+    </style>
 
-
+    <style name="My.Widget.PopupMenu" parent="@android:style/Widget.Holo.Light.PopupMenu" /-->
 
 </resources>
