--- a/wallet/res/layout/address_book_onepane.xml
+++ b/wallet/res/layout/address_book_onepane.xml
@@ -13,9 +13,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/My.PopupOverlay"
-        android:theme="@style/threeDotsTheme"
         />
+        <!--app:popupTheme="@style/OptionMenuItemStyle"-->
+        <!--android:theme="@style/threeDotsTheme"-->
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,8 +43,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/bg_bright"
-            android:theme="@style/viewPagerTitleStrip"
             />
+            <!--android:theme="@style/viewPagerTitleStrip"-->
+
 
     </LinearLayout>
 
