--- a/wallet/res/layout/network_monitor_onepane.xml
+++ b/wallet/res/layout/network_monitor_onepane.xml
@@ -13,9 +13,11 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/My.PopupOverlay"
-        android:theme="@style/threeDotsTheme"
+
         />
+        <!--app:popupTheme="@style/OptionMenuItemStyle"-->
+        <!--android:theme="@style/threeDotsTheme"-->
+
 
     <LinearLayout
         android:layout_width="match_parent"
