--- a/wallet/res/menu/wallet_options.xml
+++ b/wallet/res/menu/wallet_options.xml
@@ -10,6 +10,11 @@
 		android:title="@string/wallet_lock_unlock_wallet"
 		android:visible="true"
 		app:showAsAction="always"
+		app:contentInsetStart="0dp"
+		app:contentInsetEnd="0dp"
+		app:contentInsetLeft="0dp"
+		app:contentInsetRight="0dp"
+		android:clipToPadding="false"
 		/>
 
 	<item
@@ -19,6 +24,11 @@
 		android:titleCondensed="@string/button_request_coins"
 		android:visible="@bool/wallet_actions_top"
 		app:showAsAction="never"
+		app:contentInsetStart="0dp"
+		app:contentInsetEnd="0dp"
+		app:contentInsetLeft="0dp"
+		app:contentInsetRight="0dp"
+		android:clipToPadding="false"
 		/>
 
 	<item
@@ -28,12 +38,22 @@
 		android:titleCondensed="@string/button_send_coins"
 		android:visible="@bool/wallet_actions_top"
 		app:showAsAction="never"
+		app:contentInsetStart="0dp"
+		app:contentInsetEnd="0dp"
+		app:contentInsetLeft="0dp"
+		app:contentInsetRight="0dp"
+		android:clipToPadding="false"
 		/>
 
 	<item
 		android:id="@+id/wallet_options_report_issue"
 		android:title="@string/preferences_report_issue_title"
 		android:showAsAction="never"
+		app:contentInsetStart="0dp"
+		app:contentInsetEnd="0dp"
+		app:contentInsetLeft="0dp"
+		app:contentInsetRight="0dp"
+		android:clipToPadding="false"
 		/>
 
 
@@ -42,6 +62,11 @@
 		android:orderInCategory="999"
 		android:title="@string/button_help"
 		android:showAsAction="never"
+		app:contentInsetStart="0dp"
+		app:contentInsetEnd="0dp"
+		app:contentInsetLeft="0dp"
+		app:contentInsetRight="0dp"
+		android:clipToPadding="false"
 		/>
 
 
